cmake_minimum_required(VERSION 3.17)
project(exp_20201218)

set(CMAKE_CXX_STANDARD 14)

add_executable(minimum_railway minimum_railway.cpp)
add_executable(minimum_railway_2 minimum_railway_2.cpp)
add_executable(minimum_railway_3 minimum_railway_3.cpp)
add_executable(minimum_railway_4 minimum_railway_4.cpp)
add_executable(minimum_railway_5 minimum_railway_5.cpp)