cmake_minimum_required(VERSION 3.17)
project(exp_20201225)

set(CMAKE_CXX_STANDARD 14)

add_executable(travel_route_1 travel_route_1.cpp)
add_executable(travel_route_2 travel_route_2.cpp)
add_executable(travel_route_3 travel_route_3.cpp)
add_executable(travel_route_4 travel_route_4.cpp)
add_executable(travel_route_5 travel_route_5.cpp)